--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Grand Opening</title>
+    <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-color: red; /* Set the background color to red */
-            color: black; /* Set the text color to black */
+            background-color: #130f40; /* Deep blue background */
+            color: white; /* White text */
+            text-align: center; /* Center align the content */
+            font-family: Arial, sans-serif; /* Choose a readable font */
+        }
+
+        h1 {
+            color: #d8c4d4; /* Light purple for the heading */
+        }
+
+        #timer {
+            font-size: 3em; /* Adjust the font size to make it larger */
+            color: #17c3b2; /* Turquoise text for the timer */
         }
     </style>
 </head>
 <body>
-    <h1>Countdown Timer:</h1>
-    <p id="timer">Calculating...</p>
+    <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
+    <p id="timer">Countdown to the Grand Opening</p>
 
     <script src="countdown.js"></script>
 </body>
