--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
             font-size: 3em; /* Adjust the font size to make it larger */
             color: #17c3b2; /* Turquoise text for the timer */
         }
+
+        #excitement-message {
+            font-size: 1.5em; /* Larger text for excitement message */
+            margin-top: 20px; /* Add space between timer and message */
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
     <p id="timer">Countdown to the Grand Opening</p>
+    
+    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
 
     <script src="countdown.js"></script>
 </body>
