--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
             background-color: #130f40; /* Deep blue background */
             color: white; /* White text */
             text-align: center; /* Center align the content */
-            font-family: Arial, sans-serif; /* Choose a readable font */
+            font-family: "Arial", sans-serif; /* Choose a readable font for the main text */
         }
 
         h1 {
             color: #d8c4d4; /* Light purple for the heading */
+            font-family: "Georgia", serif; /* Choose a more elegant font for the header */
         }
 
         #timer {
