--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-color: #130f40; /* Deep blue background */
-            color: white; /* White text */
-            text-align: center; /* Center align the content */
-            font-family: "Arial", sans-serif; /* Choose a readable font for the main text */
+            background-image: url('background.jpg'); /* Add the URL of your background image */
+            background-size: cover;
+            color: white;
+            text-align: center;
+            font-family: "Arial", sans-serif;
         }
 
         h1 {
-            color: #d8c4d4; /* Light purple for the heading */
-            font-family: "Georgia", serif; /* Choose a more elegant font for the header */
+            color: #d8c4d4;
+            font-family: "Georgia", serif;
         }
 
         #timer {
-            font-size: 3em; /* Adjust the font size to make it larger */
-            color: #17c3b2; /* Turquoise text for the timer */
+            font-size: 3em;
+            color: #17c3b2;
         }
 
         #excitement-message {
-            font-size: 1.5em; /* Larger text for excitement message */
-            margin-top: 20px; /* Add space between timer and message */
+            font-size: 1.5em;
+            margin-top: 20px;
         }
     </style>
 </head>
