--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-image: url('background.jpg'); /* Add the URL of your background image */
+            background-image: url('background.jpg'); /* Use the image named "background.jpg" */
             background-size: cover;
-            color: white;
+            color: black;
             text-align: center;
             font-family: "Arial", sans-serif;
         }
 
         h1 {
-            color: #d8c4d4;
+            color: #5f1b89; /* Purple color for the heading */
             font-family: "Georgia", serif;
         }
 
         #timer {
             font-size: 3em;
-            color: #17c3b2;
+            color: #0d4a5b; /* Dark teal text for the timer */
         }
 
         #excitement-message {
