--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-image: url('background.jpg'); /* Use the image named "background.jpg" */
-            background-size: cover;
-            color: black;
-            text-align: center;
-            font-family: "Arial", sans-serif;
+            background-color: #0d4a5b; /* Dark blue background */
+            color: white; /* White text for good contrast */
+            text-align: center; /* Center align the content */
+            font-family: "Arial", sans-serif; /* Choose a readable font */
         }
 
         h1 {
             color: #5f1b89; /* Purple color for the heading */
-            font-family: "Georgia", serif;
+            font-family: "Georgia", serif; /* Choose an elegant font for the header */
         }
 
         #timer {
-            font-size: 3em;
-            color: #0d4a5b; /* Dark teal text for the timer */
+            font-size: 3em; /* Adjust the font size to make it larger */
+            color: #17c3b2; /* Turquoise text for the timer */
         }
 
         #excitement-message {
-            font-size: 1.5em;
-            margin-top: 20px;
+            font-size: 1.5em; /* Larger text for excitement message */
+            margin-top: 20px; /* Add space between timer and message */
         }
     </style>
 </head>
 <body>
     <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
+    <p id="excitement-message">
+        Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"
+    </p>
     <p id="timer">Countdown to the Grand Opening</p>
-    
-    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
 
     <script src="countdown.js"></script>
 </body>
