--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 </head>
 <body>
     <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
-    <p id="excitement-message">
-        Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"
-    </p>
+    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
     <p id="timer">Countdown to the Grand Opening</p>
 
     <script src="countdown.js"></script>
