--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <style>
         body {
             background-color: #0d4a5b; /* Dark blue background */
-            color: white; /* White text for good contrast */
-            text-align: center; /* Center align the content */
-            font-family: "Arial", sans-serif; /* Choose a readable font */
+            color: #00FFFF; /* Cyan text */
+            text-align: center;
+            font-family: "Georgia", serif; /* Stock market font */
         }
 
         h1 {
-            color: #5f1b89; /* Purple color for the heading */
-            font-family: "Georgia", serif; /* Choose an elegant font for the header */
+            color: #5f1b89; /* Dark purple for the heading */
+            font-family: "Times New Roman", serif; /* Elegant font for the header */
         }
 
         #timer {
-            font-size: 3em; /* Adjust the font size to make it larger */
-            color: #17c3b2; /* Turquoise text for the timer */
+            font-size: 3em; /* Larger font size */
+            color: #00FFFF; /* Cyan text for the timer */
         }
 
         #excitement-message {
-            font-size: 1.5em; /* Larger text for excitement message */
-            margin-top: 20px; /* Add space between timer and message */
+            font-size: 1.8em; /* Larger text for excitement message */
+            margin-top: 20px;
+            color: #00FFFF; /* Cyan text for the message */
         }
     </style>
 </head>
