--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-color: #0d4a5b; /* Dark blue background */
+            background-color: #0b3d91; /* Dark blue background */
             color: #00FFFF; /* Cyan text */
             text-align: center;
             font-family: "Georgia", serif; /* Stock market font */
         }
 
         h1 {
-            color: #5f1b89; /* Dark purple for the heading */
+            color: #63006E; /* Different purple for the heading */
             font-family: "Times New Roman", serif; /* Elegant font for the header */
+            font-size: 2.5em; /* Larger font size for the header */
         }
 
         #timer {
-            font-size: 3em; /* Larger font size */
+            font-size: 2.2em; /* Larger font size for the timer */
             color: #00FFFF; /* Cyan text for the timer */
         }
 
         #excitement-message {
-            font-size: 1.8em; /* Larger text for excitement message */
+            font-size: 2em; /* Larger text for excitement message */
             margin-top: 20px;
             color: #00FFFF; /* Cyan text for the message */
         }
@@ -29,8 +30,8 @@
 </head>
 <body>
     <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
-    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
     <p id="timer">Countdown to the Grand Opening</p>
+    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
 
     <script src="countdown.js"></script>
 </body>
