--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background-color: #0b3d91; /* Dark blue background */
+            background: url('background.jpg') no-repeat center center fixed; /* Background image */
+            background-size: cover;
             color: #00FFFF; /* Cyan text */
             text-align: center;
             font-family: "Georgia", serif; /* Stock market font */
