--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             color: #00FFFF; /* Cyan text */
             text-align: center;
             font-family: "Georgia", serif; /* Stock market font */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
 
         h1 {
