--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>LiquidExchange Lounge Grand Opening</title>
     <style>
         body {
-            background: url('background.jpg') no-repeat center center fixed; /* Background image */
+            background: url('background.jpg') no-repeat center center fixed;
             background-size: cover;
-            color: #00FFFF; /* Cyan text */
+            color: #00FFFF;
             text-align: center;
-            font-family: "Georgia", serif; /* Stock market font */
+            font-family: "Georgia", serif;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -17,20 +17,26 @@
         }
 
         h1 {
-            color: #63006E; /* Different purple for the heading */
-            font-family: "Times New Roman", serif; /* Elegant font for the header */
-            font-size: 2.5em; /* Larger font size for the header */
+            color: #63006E;
+            font-family: "Times New Roman", serif;
+            font-size: 2.5em;
         }
 
         #timer {
-            font-size: 2.2em; /* Larger font size for the timer */
-            color: #00FFFF; /* Cyan text for the timer */
+            font-size: 2.2em;
+            color: #00FFFF;
+            animation: fadeInOut 3s linear infinite; /* Add animation */
         }
 
         #excitement-message {
-            font-size: 2em; /* Larger text for excitement message */
+            font-size: 2em;
             margin-top: 20px;
-            color: #00FFFF; /* Cyan text for the message */
+            color: #00FFFF;
+        }
+
+        @keyframes fadeInOut {
+            0%, 100% { opacity: 0; }
+            50% { opacity: 1; }
         }
     </style>
 </head>
