--- a/index.html
+++ b/index.html
@@ -58,22 +58,32 @@
 <body>
     <h1>Welcome to the LiquidExchange Lounge Grand Opening!</h1>
     <p id="timer">Countdown to the Grand Opening</p>
-    <p id="excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
+    <p id "excitement-message">Get ready for an unforgettable night of fun! Check back often for updates and remember, "In the world of stocks, we've found the perfect mix of bulls, bears, and good times!"</p>
 
     <!-- Call to Action Button -->
     <button class="cta-button" id="attendance-button" onclick="increaseCount()">I'll be there</button>
 
     <!-- Click Counter -->
-    <p id="click-counter">0 people will be there</p>
+    <p id="click-counter"></p>
 
     <script src="countdown.js"></script>
     <script>
-        let clickCount = 0;
+        let clickCount = localStorage.getItem('attendanceCount') || 0;
 
         function increaseCount() {
-            clickCount++;
-            document.getElementById('click-counter').textContent = `${clickCount} people will be there`;
+            if (!localStorage.getItem('hasClicked')) {
+                clickCount++;
+                localStorage.setItem('attendanceCount', clickCount);
+                localStorage.setItem('hasClicked', 'true');
+                updateCounter();
+            }
         }
+
+        function updateCounter() {
+            document.getElementById('click-counter').textContent = `${clickCount} ${clickCount === 1 ? 'person' : 'people'} will be there`;
+        }
+
+        updateCounter();
     </script>
 </body>
 </html>
