--- a/index.html
+++ b/index.html
@@ -82,79 +82,7 @@
     <!-- Click Counter -->
     <p id="click-counter">0 people will be there</p>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const counter = document.getElementById('click-counter');
-            const button = document.getElementById('attendance-button');
-
-            function isButtonClicked() {
-                return localStorage.getItem('buttonClicked') === 'true';
-            }
-
-            function updateButtonState() {
-                if (isButtonClicked()) {
-                    button.disabled = true;
-                    button.textContent = "Already Clicked";
-                }
-            }
-
-            function updateCounter(count) {
-                counter.textContent = `${count} ${count === 1 ? 'person' : 'people'} will be there`;
-            }
-
-            function fetchCounter() {
-                fetch('counter.php')
-                    .then(response => response.text())
-                    .then(data => {
-                        const count = parseInt(data);
-                        updateCounter(count);
-                        updateButtonState();
-                    })
-                    .catch error => {
-                        console.error('Error fetching counter:', error);
-                    });
-            }
-
-            function incrementCounter() {
-                fetch('counter.php', { method: 'POST' })
-                    .then(response => response.text())
-                    .then(data => {
-                        const count = parseInt(data);
-                        updateCounter(count);
-                        updateButtonState();
-                    })
-                    .catch(error => {
-                        console.error('Error incrementing counter:', error);
-                    });
-            }
-
-            // Function to create confetti
-            function createConfetti() {
-                const confetti = document.createElement('div');
-                confetti.classList.add('confetti');
-                const xPos = Math.random() * window.innerWidth;
-                const yPos = -10;
-                confetti.style.left = `${xPos}px`;
-                confetti.style.top = `${yPos}px`;
-                document.body.appendChild(confetti);
-
-                // Remove the confetti element after animation
-                confetti.addEventListener('animationiteration', () => {
-                    document.body.removeChild(confetti);
-                });
-            }
-
-            fetchCounter();
-
-            button.addEventListener('click', function () {
-                incrementCounter();
-                localStorage.setItem('buttonClicked', 'true');
-                updateButtonState();
-
-                // Create confetti when the button is clicked
-                createConfetti();
-            });
-        });
-    </script>
+    <!-- JavaScript for Countdown Timer, Button Functionality, and Confetti -->
+    <script src="countdown.js"></script>
 </body>
 </html>
