--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
         }
 
         /* Confetti Styles */
+        .confetti-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
         .confetti {
             position: absolute;
             width: 10px;
@@ -63,11 +72,6 @@
             opacity: 0.7;
             transform: rotate(45deg);
             animation: confetti-fall 4s linear infinite;
-        }
-
-        @keyframes confetti-fall {
-            0% { transform: translateY(-100vh) rotate(45deg); }
-            100% { transform: translateY(100vh) rotate(45deg); }
         }
     </style>
 </head>
@@ -82,7 +86,37 @@
     <!-- Click Counter -->
     <p id="click-counter">0 people will be there</p>
 
+    <!-- Confetti Container -->
+    <div class="confetti-container" id="confetti-container"></div>
+
     <!-- JavaScript for Countdown Timer, Button Functionality, and Confetti -->
     <script src="countdown.js"></script>
+    <script>
+        // JavaScript to handle button click and confetti animation
+        document.addEventListener("DOMContentLoaded", function () {
+            var attendanceButton = document.getElementById("attendance-button");
+            var clickCounter = document.getElementById("click-counter");
+            var confettiContainer = document.getElementById("confetti-container");
+
+            attendanceButton.addEventListener("click", function () {
+                // Perform the click count functionality
+                fetch('counter.php', { method: 'POST' })
+                    .then(response => response.text())
+                    .then(data => {
+                        clickCounter.textContent = data + " people will be there";
+                    });
+
+                // Create and append confetti elements
+                for (var i = 0; i < 100; i++) {
+                    var confetti = document.createElement('div');
+                    confetti.className = 'confetti';
+                    confetti.style.left = Math.random() * 100 + 'vw';
+                    confetti.style.animationDuration = Math.random() * 3 + 2 + 's';
+                    confetti.style.animationDelay = Math.random() * 2 + 's';
+                    confettiContainer.appendChild(confetti);
+                }
+            });
+        });
+    </script>
 </body>
 </html>
