--- a/index.html
+++ b/index.html
@@ -48,6 +48,30 @@
             font-size: 1.5em;
             cursor: pointer;
         }
+
+        .confetti-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #ffdc00;
+            opacity: 0.7;
+            transform: rotate(45deg);
+            animation: confetti-fall 4s linear infinite;
+        }
+
+        @keyframes confetti-fall {
+            0% { transform: translateY(-100vh) rotate(45deg); }
+            100% { transform: translateY(100vh) rotate(45deg); }
+        }
     </style>
 </head>
 <body>
@@ -57,6 +81,9 @@
 
     <!-- Call to Action Button -->
     <button class="cta-button" id="confetti-button">Yay!</button>
+
+    <!-- Confetti Container -->
+    <div class="confetti-container" id="confetti-container"></div>
 
     <!-- JavaScript for Countdown Timer and Button Functionality -->
     <script src="countdown.js"></script>
